
===== Revision history of Mail-Transport

All changes are made by Mark Overmeer <markov@cpan.org> unless
explicitly stated differently.

version 3.007:

version 3.006: Thu 21 Aug 10:23:14 CEST 2025

	Changes:
	- MailBox mid-life upgrade: require Perl minimal version 5.16

	Improvements:
	- ::SMTP 30% faster, 73% less computer power
	- add .gitignore
	- do not use bareword file-handles anymore.
	- use defined-or

version 3.005: Wed 22 Jul 10:40:05 CEST 2020

	Improvements:
	- warn to use ::SMTP, not ::SendMail on bulk messages.
	- much lower elapse time on ::SMTP (local?) delivery.

version 3.004: Fri  3 May 09:29:07 CEST 2019

	Improvements:
	- add imap/imap4

version 3.003: Mon  3 Sep 08:16:23 CEST 2018

	Fixes:
	- fix metadata [Mohammad S Anwar]
	- add pod testing
	- use of NetConfig

	Improvements:
	- return dataend() message to ::SMTP::trySend(), which may contain
	  the message-id.  [Andy Beverley]

version 3.002: Wed 24 Jan 16:02:02 CET 2018

	Improvements:
	- convert to GIT
	- publish on GitHUB
	- fix license to "as perl"
	  rt.cpan.org#120319 [Jitka Plesnikova]

version 3.001: Wed  8 Nov 13:06:18 CET 2017

	Fixes:
	- link to Perl licenses.
	  rt.cpan.org#120319 [Jitka Plesnikova]

version 3.000: Thu  2 Feb 15:41:59 CET 2017

	Changes:
	- split-off from Mail::Box
	- supports perl from 5.10 (was 5.8.5)