@@ -6,6 +6,9 @@ explicitly stated differently.
 
 version 3.007:
 
+	Fixes:
+	- smtp when the message body does not naturally end on a blank.
+
 version 3.006: Thu 21 Aug 10:23:14 CEST 2025
 
 	Changes:
